--- a/5Forms/formsStyle.css
+++ b/5Forms/formsStyle.css
@@ -3,3 +3,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     height: 2000px;
 }
+.rb-decor {
+    display: none;
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    width: 0;
+}
+.rb-decor:checked + label {
+    border: 1px solid green;
+    font-size: large;
+    font-weight: bold;
+}
